<resources>
    <string name="app_name">VIR</string>
    <string name="english">English</string>
    <string name="facebook_app_id">2031461330428854</string>
    <string name="fb_login_protocol_scheme">fb2031461330428854</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">isPiD0VxcDV1uiw0fsW3YVvaf</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">Y8VzT3NZ2JezC2U3dDFJS9UNpxTx6TBKej1oHQ6AJiB7pSlexN</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign In or Register</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions"
    </string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unplug_mobile_cable_from_computer">Please, attach cable to the computer</string>
    <string name="something_went_wrong_please_try_again">Something wrong happen, please try again</string>
    <string name="please_wait_dotted">Please wait ...</string>
    <string name="search">Search</string>
    <string name="you_need_to_grant_required_permissions">You need to grant required permissions</string>
    <string name="no_camera_app_found_in_this_device">No camera app found in this device</string>
    <string name="error_fetching_this_image">Error fetching this image</string>
    <string name="from_gallery">Choose from gallery</string>
    <string name="from_camera">Choose from camera</string>
    <string name="appName">Vir</string>
    <string name="contact_us">Contact us</string>
    <string name="aboutUs">About us</string>
    <string name="settings">Settings</string>
    <string name="logOut">Log out</string>
    <string name="phoneNumber">Phone Number :</string>
    <string name="signUp">Sign up</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgetPassword">Are you forget password ?</string>
    <string name="youHaveAccount">Have account ?</string>
    <string name="creatNow"><u>Create now</u></string>
    <string name="notHaveAccount">Not have account ?</string>
    <string name="MustEnterValue">Must enter required value</string>
    <string name="userName">Username</string>
    <string name="phone">Phone number</string>
    <string name="visitor">Visitor</string>
    <string name="complete_signUp">Complete sign up</string>
    <string name="home">Home</string>
    <string name="category">Categories</string>
    <string name="change_to_english">التحويل الي العربية</string>
    <string name="completeSignUP">Complete Sign Up</string>
    <string name="address">Address</string>
    <string name="title_activity_maps">Map</string>
    <string name="removeImage">Delete photo</string>
    <string name="mustEnterMessage">Must enter message first</string>
    <string name="mustName">Must enter username</string>
    <string name="mustPassword">Must enter password</string>
    <string name="mustPhone">Must enter phone number</string>
    <string name="mustEmail">Must enter Email</string>
    <string name="mustIssue">Must enter your problem</string>
    <string name="MustMoreSix">Password must be more than 6 digits</string>
    <string name="MustMail">Must enter email</string>
    <string name="openGps">Please , turn on GPS</string>
    <string name="connectionFieldTryAgain">Connection error happened ,try again</string>
    <string name="mustEnterAddress">Must enter address</string>
    <string name="emailOrPhone">Email or Phone number</string>
    <string name="update">Update data</string>
    <string name="changeLocation">Change address</string>
    <string name="updateLocation">Update address</string>
    <string name="myAccount">My account</string>
    <string name="cart">Cart</string>
    <string name="areYouWantLogOut">Do You Want To LogOut ?</string>
    <string name="noCategory">Sorry, No Category Available</string>
    <string name="noItems">Sorry, No items in this Category</string>
    <string name="productAdded">Item Added successfully</string>
    <string name="productAddedBefore">This item Added before</string>
    <string name="AED">AED</string>
    <string name="writeWhatYouWant">Write what you want to search about</string>
    <string name="advancedSearch">Advanced Search</string>
    <string name="chooseProvenance">Provenance</string>
    <string name="fastSearch">Fast Search</string>
    <string name="unit">Unit</string>
    <string name="quantity">Qty</string>
    <string name="description">Description</string>
    <string name="buyNow">Buy Now</string>
    <string name="noItemInCart">No Items in the Cart</string>
    <string name="pressAgainToExit">Press again to close</string>
    <string name="totalPrice">Total Price :</string>
    <string name="shippedAt">Shipped At</string>
    <string name="deliveredAt">Delivered At</string>
    <string name="status">Status: </string>
    <string name="noOrders">No Order now</string>
    <string name="offer">Offer</string>
    <string name="carton">Carton</string>
    <string name="buyCarton">Buy Carton</string>
    <string name="buy">Buy</string>
    <string name="orderStatus">Orders Status</string>
    <string name="address_admin">Manage Addresses</string>
    <string name="productsDetails">Items details</string>
    <string name="arabic">عربي</string>
    <string name="areYouWantDeleteAddress">Are you sure you want to delete address ?</string>
    <string name="addressDeleted">Address deleted</string>
    <string name="editAddress">Edit address</string>
    <string name="addressUpdated">Address updated</string>
    <string name="add_new_address">Add new address</string>
    <string name="sendOrder">Send order</string>
    <string name="orderSentSuccessfully">Order sent successfully</string>
    <string name="choose_address">Choose Address</string>
    <string name="send">Send</string>
    <string name="write_your_message_here">Write your message here</string>
    <string name="get_in_touch_with">Get in Touch with</string>
    <string name="weReceivedYourMessage">We received your message, Thank you</string>
    <string name="delete">Delete</string>
    <string name="my_favourite">My Favourite</string>
    <string name="contracts">Contracts</string>
    <string name="quick_order">Quick order</string>
    <string name="welcom">Welcome</string>
    <string name="offers">Offers</string>
    <string name="orderNow">Order Now</string>
    <string name="writeYourOrderHere">Write your order here</string>
    <string name="orderedBy">Ordered By</string>
    <string name="shippingBy">Shipping By</string>
    <string name="confirm">Confirm</string>
    <string name="refuse">Refuse</string>
    <string name="mustSpecifyQuantity">Must specify the quantity first</string>
    <string name="products">Products</string>
    <string name="YouShouldSignUpFirst">You should sign up first to complete order</string>
    <string name="SignUpNow">Sign up now</string>
    <string name="notNow">Not Now</string>
    <string name="chooseYourArea">Choose Your Area</string>
    <string name="chooseArea">Choose Area</string>
    <string name="chooseCity">Choose City</string>
    <string name="choose">Choose</string>
    <string name="youNeedToChooseRegionFirst">You need to choose region first</string>
    <string name="changeYourArea">Change your area</string>
    <string name="addToCart">Add to cart</string>
    <string name="confirmOrder">Confirm order</string>
    <string name="delivered">Delivered</string>
    <string name="forDelivery">For Delivery</string>
    <string name="orderAt">Ordered At</string>
    <string name="DeliverAt">Deliver At</string>
    <string name="notes">Notes:</string>
    <string name="deliveryPeriod">Delivery Period:</string>
    <string name="moreDetails">More Details</string>
    <string name="TotalPriceLessThanMinimum">Total price is less than minimum charge</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="addContract">Add Contract</string>
    <string name="contractPolicy">Contract Policy</string>
    <string name="contractType">Contract Type</string>
    <string name="choosePeriod">Choose Period</string>
    <string name="sendContract">Send Contract</string>
    <string name="editCart">Edit Cart</string>
    <string name="activeOrders">Active Orders</string>
    <string name="free">Free</string>
    <string name="mustChoosePeriodFirst">Must choose period first</string>
    <string name="chooseDataCorrectly">Choose data correctly and try again</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="passwordNotMatches">Passwords Not Matched</string>
    <string name="shouldSignUpFirst">Sign up first to complete your order</string>
    <string name="signUpNow">Sign Up Now</string>
    <string name="writeContractNameHere">Write Contract name Here</string>
    <string name="writeYourNotesHere">Write Your Notes Here</string>
    <string name="ContractSentSuccessfully">Contract Sent Successfully</string>
    <string name="nextOrder">Next Order</string>
    <string name="cancelContract">Cancel Contract</string>
    <string name="every">Every</string>
    <string name="days">Days</string>
    <string name="contractCanceledSuccessfully">Contract canceled successfully</string>
    <string name="areYouSureToCancelTheContract">Are you sure to cancel the contract ?</string>
    <string name="noContractOnYourAccount">No Contracts in your account</string>
    <string name="fillYourCartWithEveryThing">Fill your cart with everything you wish</string>
    <string name="discoverOffers">Discover Offers</string>
    <string name="chooseCorrectAddress">Choose Correct Address</string>
    <string name="myCurrentLocation">My Current Location</string>
    <string name="notification">Notifications</string>
    <string name="messages">Messages</string>
    <string name="reservations">Reservations</string>
    <string name="favourite">Favorites</string>
    <string name="update_account">Update Account</string>
    <string name="how_to_use">How To Use</string>
    <string name="about_application">About Application</string>
    <string name="share_apllication">Share Apllication</string>
    <string name="im_business_owner">Be Business Owner</string>
    <string name="application_settings">Application Settings</string>
    <string name="compare">Compares</string>
    <string name="spinner_title">Choose Issue</string>
    <string name="close_my_account">Close My Account</string>
    <string name="recervation_activiation">Reservation Activiation</string>
    <string name="cancel">Cancel</string>
    <string name="shop_name">Shop Name</string>
    <string name="sign_out">Sign Out</string>
    <string name="login_or_signup">Login \\ Sign Up</string>
    <string name="order_number">Order number :</string>
    <string name="order_date">Order date</string>
    <string name="order_amount">Order amount</string>
    <string name="order_details">Order details</string>
    <string name="areYouWantConfirmOrder">Are you sure to confirm this order ?</string>
    <string name="need_to_have_a_full_control">To VIR</string>
    <string name="view_closest_stores">View the closest store to my location:</string>
    <string name="filter">filter</string>
    <string name="all_governorates">All Governorates</string>
    <string name="all_cities">All Cities</string>
    <string name="all_zones">All Zones</string>
</resources>