<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_weight="1"
    android:background="@drawable/sidenav_overlay_bg"
    android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_userImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="@dimen/medium_margin"
        android:src="@mipmap/default_avatar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_marginLeft="@dimen/medium_margin"
            android:layout_marginRight="@dimen/small_margin"
            android:layout_marginStart="@dimen/medium_margin"
            android:text="@string/welcom"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/need_to_have_a_full_control"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_login_or_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:background="@drawable/header_border"
        android:paddingBottom="@dimen/top_down_margin"
        android:paddingEnd="@dimen/medium_margin"
        android:paddingLeft="@dimen/medium_margin"
        android:paddingStart="@dimen/medium_margin"
        android:paddingTop="@dimen/top_down_margin"
        android:text="@string/login_or_signup"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/medium_text"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_signOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:background="@drawable/header_border"
        android:padding="@dimen/top_down_margin"
        android:text="@string/sign_out"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/medium_text"
        android:textStyle="bold"
        android:visibility="gone" />
</LinearLayout>


