<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/small_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/small_margin"
                        android:layout_marginEnd="@dimen/top_down_margin"
                        android:layout_marginRight="@dimen/top_down_margin"
                        android:text="@string/order_number"
                        android:textColor="@color/black"
                        android:textSize="@dimen/medium_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_order_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:textColor="@color/twitterColor"
                        android:textSize="@dimen/medium_text"
                        android:textStyle="bold" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/small_margin"

                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/top_down_margin"
                        android:layout_marginRight="@dimen/top_down_margin"
                        android:text="@string/shop_name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/medium_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_shop_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/below_medium_text"
                        android:textStyle="bold" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginBottom="@dimen/small_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/top_down_margin"
                        android:layout_marginRight="@dimen/top_down_margin"
                        android:text="@string/order_date"
                        android:textColor="@color/black"
                        android:textSize="@dimen/medium_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_order_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/below_medium_text"
                        android:textStyle="bold" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/top_down_margin"
                        android:layout_marginRight="@dimen/top_down_margin"
                        android:text="@string/order_amount"
                        android:textColor="@color/black"
                        android:textSize="@dimen/medium_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_order_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:textColor="@color/gray"
                        android:textSize="@dimen/below_medium_text"
                        android:textStyle="bold" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/small_margin"
                    android:background="#EBEBEB" />

                <TextView
                    android:id="@+id/tv_order_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/top_down_margin"
                    android:layout_marginRight="@dimen/top_down_margin"
                    android:drawableEnd="@drawable/ic_order_details"
                    android:drawableRight="@drawable/ic_order_details"
                    android:gravity="start|center"
                    android:padding="@dimen/small_margin"
                    android:text="@string/order_details"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/medium_text"
                    android:textStyle="bold" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <ImageView

            android:id="@+id/btn_order_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/medium_margin"
            android:layout_marginRight="@dimen/medium_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:elevation="2dp"
            android:src="@drawable/ic_order_pending" />


    </FrameLayout>
</LinearLayout>